# nandu-web

./: Cargo.toml  Dioxus.toml  README.md
assets/: flat_router.css  main.css
docs/: CNAME  index.html
docs/assets/dioxus/: nandu-web.js  nandu-web_bg.wasm
docs/assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
src/: main.rs
